--- a/线框图jpg/论坛_07_04/论坛_0705/css/base.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/base.css
@@ -1,12 +1,6 @@
 body {
     background-color: rgb(239, 239, 239);
-    /*背景色*/
-}
-
-
-/* 内容包裹层自定义 */
-body {
-    background-color: rgb(239, 239, 239);
+    font-family: 微软雅黑;
     /*背景色*/
 }
 .container_custom {
