--- a/线框图jpg/论坛_07_04/论坛_0705/css/hostpage.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/hostpage.css
@@ -1,4 +1,14 @@
- .title {
+/* 改 */
+.cast2_title {
+    color: rgb(180, 180, 181);
+    margin-left: 30px;
+    position: relative;
+    top: 40px;
+    font-size: 30px;
+}
+
+
+.title {
      margin-bottom: 10px;
      margin-top: 6px;
  }
