--- a/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_base.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_base.css
@@ -146,7 +146,8 @@ nav a:active,nav a:hover,nav a:focus,nav a:visited{
     right: 15px;
     display: none;
 }
-#icon-user{
-    width: 20px;
-    vertical-align:top;
+.icon-menu{
+    width: 22px;
+    vertical-align:middle;
+    padding-bottom: 1px;
 }
