手机版集成12.12

--- a/论坛项目/template/forum/touch/forum/viewthread.htm
+++ b/论坛项目/template/forum/touch/forum/viewthread.htm
@@ -1,6 +1,6 @@
 <!--{eval $threadsort = $threadsorts = null;}-->
 <!--{template common/header}-->
-<link rel="stylesheet" href="../css/m_css/m_details.css">
+<link rel="stylesheet" href="{$_G['own_static_path']}/css/m_css/m_details.css">
 
 <!--{hook/viewthread_top_mobile}-->
 <!-- main postlist start -->
