--- a/论坛项目/template/forum/touch/common/footer.htm
+++ b/论坛项目/template/forum/touch/common/footer.htm
@@ -40,8 +40,10 @@
 			<object class="icon-menu" data="{$_G['own_static_path']}/img/login.svg" type="image/svg+xml">
 			  </object> 登录</a>
 		<div class="hide-menu"> 
-			<a href="forum.php?mod=forumdisplay&fid=37&mobile=2">ASUWatch社区</a>
+			<a href="forum.php?mod=forumdisplay&fid=37&mobile=2">ASU Watch社区</a>
+			<hr class="menu-hr">
 			<a href="forum.php?mod=forumdisplay&fid=38&mobile=2">活动</a>
+			<hr class="menu-hr">
 			<a href="forum.php?mod=forumdisplay&fid=39&mobile=2">服务</a>
 		</div>
 	</nav>
