--- a/论坛项目/template/forum/touch/common/header.htm
+++ b/论坛项目/template/forum/touch/common/header.htm
@@ -25,7 +25,7 @@
 
 </head>
 
-<body class="bg">
+<body >
     <!-- 页眉**开始 -->
     <header class="clearfix">
             <div class="pull-left"> 
@@ -34,4 +34,4 @@
             <i class="fa fa-search fa-pull-right" aria-hidden="true"></i>
     </header>
     <!-- 页眉**结束 -->
-<!--{hook/global_header_mobile}-->
+ 
