--- a/论坛项目/template/forum/touch/forum/guide.htm
+++ b/论坛项目/template/forum/touch/forum/guide.htm
@@ -1,6 +1,8 @@
 <!--{template common/header}-->
  
 <!-- main threadlist start -->
+<!--帖子列表**开始 -->
+<div class="container content">
 <div class="threadlist"> 
 	<h2 class="thread_tit">{lang hotest_thread}</h2>
 
@@ -10,7 +12,8 @@
 
 </div>
 <!-- main threadlist end -->
-
+</div>
+<!--帖子列表**结束 -->
 $multipage
 
 <div class="pullrefresh" style="display:none;"></div>
