--- a/论坛项目/template/forum/touch/common/footer.1.htm
+++ b/论坛项目/template/forum/touch/common/footer.1.htm
@@ -19,45 +19,14 @@
 		<!--{/if}-->
 	</div>
     <div>
-		
+		<a href="{$_G['setting']['mobile']['simpletypeurl'][0]}">{lang no_simplemobiletype}</a> |  
 		<a href="javascript:;" style="color:#D7D7D7;">{lang mobile2version}</a> | 
 		<a href="{$_G['setting']['mobile']['nomobileurl']}">{lang nomobiletype}</a> | 
 		<!--{if $clienturl}--><a href="$clienturl">{lang clientversion}</a><!--{/if}-->
     </div>
-	<p>&copy; Beijing ASU Tech Co.Ltd.<br/>北京一数科技有限公司 京ICP备15036919号-1</p>
+	<p>&copy; Comsenz Inc.</p>
 </div>
 <!--{/if}-->
- <!-- 底部**开始 --> 
-	<nav>
-		<a id="forum" class="right-border col-xs-4 col-sm-4" href="javascript:;">
-			<object class="icon-menu" data="{$_G['own_static_path']}/img/plate.svg" type="image/svg+xml">
-			</object>板块
-		</a>
-		<a class="right-border col-xs-4 col-sm-4" href="m_看帖.html">
-			<object class="icon-menu" data="{$_G['own_static_path']}/img/posted.svg" type="image/svg+xml">
-			</object>发帖</a>
-		<a class="col-xs-4 col-sm-4 act-grey" href="javascript:;">
-			<object class="icon-menu" data="{$_G['own_static_path']}/img/login.svg" type="image/svg+xml">
-			  </object> 登录</a>
-		<div class="hide-menu"> 
-			<a href="forum.php?mod=forumdisplay&fid=37&mobile=2">ASU Watch社区</a>
-			<hr class="menu-hr">
-			<a href="forum.php?mod=forumdisplay&fid=38&mobile=2">活动</a>
-			<hr class="menu-hr">
-			<a href="forum.php?mod=forumdisplay&fid=39&mobile=2">服务</a>
-		</div>
-	</nav>
-	<!-- 底部**结束 -->
-	<!-- 回到顶部**开始 -->
-	<div id="to_top" title="回到顶部">
-			<i class="fa fa-angle-up" aria-hidden="true">
-				
-			</i>
-	</div>
-	<!-- 回到顶部**结束 -->
-		<script src="{$_G['own_static_path']}/js/jquery.min.js"></script>
-		<script src="{$_G['own_static_path']}/js/bootstrap.min.js"></script>
-		<script src="{$_G['own_static_path']}/js/m_js/m_base.js"></script>
 </body>
 </html>
 <!--{eval updatesession();}-->
