--- a/论坛项目/static/forum/css/m_css/m_publish.css
+++ b/论坛项目/static/forum/css/m_css/m_publish.css
@@ -16,6 +16,9 @@
     .posted-title{
         position: relative;
     }
+    .input-posted-title{
+        width: 100%;
+    }
     #posted-title{
         width: 100%;
         padding:10px 60px 10px 10px; 
