--- a/论坛项目/template/forum/touch/forum/forumdisplay.htm
+++ b/论坛项目/template/forum/touch/forum/forumdisplay.htm
@@ -5,15 +5,20 @@
 <!-- 板块标题**开始 -->
 <!--{if $_G[fid] == 38}-->
   <div class="clearfix forum"> 
-				  <img class="forum-logo" src="{$_G['own_static_path']}/img/cast_title.png" />
-				  <span class="forum-title" >$_G['forum']['name']</span>
+	  <span class="logo-holder">
+		  
+	 	  <img class="forum-logo" src="{$_G['own_static_path']}/img/cast_title.png" />
+	  </span>
+	  <span class="forum-title" >$_G['forum']['name']</span>
   </div>
   <!--{/if}-->
   <!--{if $_G[fid] == 37}-->
    <!-- 板块标题**开始 -->
    <div class="clearfix forum"> 
+		<span class="logo-holder">
 		<img class="forum-logo" src="{$_G['own_static_path']}/img/cast_title.png" />
-		<span class="forum-title" >ASUWatch</span>
+	    </span>
+		<span class="forum-title" >ASU Watch</span>
   </div>
   <!-- 板块标题**结束 -->
 <!--{/if}-->
