--- a/论坛项目/template/forum/touch/forum/guide.htm
+++ b/论坛项目/template/forum/touch/forum/guide.htm
@@ -4,7 +4,7 @@
 <!--帖子列表**开始 -->
 <div class="container content">
 <div class="threadlist"> 
-	<h2 class="thread_tit">{lang hotest_thread}</h2>
+	<h2 class="thread_tit">最新帖子:</h2>
 
 	<!--{loop $data $key $list}-->
 		<!--{subtemplate forum/guide_list_row}-->
