--- a/论坛项目/template/forum/touch/home/space_pm.htm
+++ b/论坛项目/template/forum/touch/home/space_pm.htm
@@ -7,8 +7,9 @@
 	<!-- header start -->
 	<header class="header">
 	    <div class="nav">
-			<div class="icon_edit y"><a href="home.php?mod=spacecp&ac=pm"><span class="none">{lang send_pm}</span></a></div>
-	        <a href="home.php?mod=space&uid=$_G[uid]&do=profile&mycenter=1" class="z"><img src="{STATICURL}image/mobile/images/icon_back.png" /></a>
+			<div class="icon_edit y"><a href="home.php?mod=spacecp&ac=pm">llllllllll<span class="none">{lang send_pm}</span></a></div>
+	        <a href="home.php?mod=space&uid=$_G[uid]&do=profile&mycenter=1" class="z">
+				<img src="{STATICURL}image/mobile/images/icon_back.png" /></a>
 			<span class="category"><span class="name">{lang pm_center}</span>
 	        </span>
 	    </div>
