--- a/论坛项目/template/forum/touch/forum/post.htm
+++ b/论坛项目/template/forum/touch/forum/post.htm
@@ -1,4 +1,5 @@
 <!--{template common/header}-->
+<link rel="stylesheet" href="{$_G['own_static_path']}/css/m_css/m_publish.css">
 <!--{if $special != 2 && $special != 4 && !($isfirstpost && $sortid)}-->
 <!--{eval $adveditor = $isfirstpost && $special && ($_GET['action'] == 'newthread' || $_GET['action'] == 'reply' && !empty($_GET['addtrade']) || $_GET['action'] == 'edit' );}-->
 
@@ -37,24 +38,16 @@
 	<input type="hidden" name="specialextra" value="$specialextra" />
 <!--{/if}-->
 
-<!-- header start -->
-<header class="header">
-    <div class="nav">
-		<span class="y"><button id="postsubmit" class="btn_pn <!--{if $_GET[action] == 'edit'}-->btn_pn_blue" disable="false"<!--{else}-->btn_pn_grey" disable="true"<!--{/if}-->><span><!--{if $_GET[action] == 'newthread'}-->{lang send_thread}<!--{elseif $_GET[action] == 'reply'}-->{lang join_thread}<!--{elseif $_GET[action] == 'edit'}-->{lang edit_save}<!--{/if}--></span></button></span>
-		<input type="hidden" name="{if $_GET[action] == 'newthread'}topicsubmit{elseif $_GET[action] == 'reply'}replysubmit{elseif $_GET[action] == 'edit'}editsubmit{/if}" value="yes">
-		<a href="<!--{if $_GET[action] == 'newthread'}-->forum.php?mod=forumdisplay&fid=$_G[fid]&page=$_GET[page]<!--{else}-->forum.php?mod=redirect&goto=findpost&ptid=$_G[tid]&pid=$pid<!--{/if}-->" class="z"><img src="{STATICURL}image/mobile/images/icon_back.png" /></a>
-		<span><!--{if $_GET[action] == 'edit'}-->{lang edit}<!--{else}-->{lang send_threads}<!--{/if}--></span>
-    </div>
-</header>
-<!-- header end -->
-
+ 
 <!-- main postbox start -->
-<div class="wp">
+<div class="content">
 	<div class="post_from">
 		<ul class="cl">
-			<li class="bl_line">
+			<li class=" ">
 			<!--{if $_GET['action'] != 'reply'}-->
-			<input type="text" tabindex="1" class="px" id="needsubject" size="30" autocomplete="off" value="$postinfo[subject]" name="subject" placeholder="{lang thread_subject}" fwin="login">
+			<div class="posted-title">
+			<input type="text" tabindex="1" class="input-posted-title" id="needsubject" size="30" autocomplete="off" value="$postinfo[subject]" name="subject" placeholder="{lang thread_subject}" fwin="login">
+		    </div>
 			<!--{else}-->
 				RE: $thread['subject']
 				<!--{if $quotemessage}-->$quotemessage<!--{/if}-->
@@ -62,14 +55,16 @@
 			</li>
 			<!--{if $isfirstpost && !empty($_G['forum'][threadtypes][types])}-->
 			<li class="bl_line">
-				<select id="typeid" name="typeid" class="sort_sel">
-					<option value="0" selected="selected">{lang select_thread_catgory}</option>
-					<!--{loop $_G['forum'][threadtypes][types] $typeid $name}-->
-					<!--{if empty($_G['forum']['threadtypes']['moderators'][$typeid]) || $_G['forum']['ismoderator']}-->
-					<option value="$typeid"{if $thread['typeid'] == $typeid || $_GET['typeid'] == $typeid} selected="selected"{/if}><!--{echo strip_tags($name);}--></option>
-					<!--{/if}-->
-					<!--{/loop}-->
-				</select>
+					<div class="posted-classification">
+						<select id="typeid" name="typeid" class=" ">
+							<option value="0" selected="selected">{lang select_thread_catgory}</option>
+							<!--{loop $_G['forum'][threadtypes][types] $typeid $name}-->
+							<!--{if empty($_G['forum']['threadtypes']['moderators'][$typeid]) || $_G['forum']['ismoderator']}-->
+							<option value="$typeid"{if $thread['typeid'] == $typeid || $_GET['typeid'] == $typeid} selected="selected"{/if}><!--{echo strip_tags($name);}--></option>
+							<!--{/if}-->
+							<!--{/loop}-->
+						</select>
+				    </div>	
 			</li>
 			<!--{/if}-->
 			<!--{if $_GET[action] == 'edit' && $isorigauthor && ($isfirstpost && $thread['replies'] < 1 || !$isfirstpost) && !$rushreply && $_G['setting']['editperdel']}-->
@@ -80,19 +75,18 @@
 			<li class="bl_none area">
 			<textarea class="pt" id="needmessage" tabindex="3" autocomplete="off" id="{$editorid}_textarea" name="$editor[textarea]" cols="80" rows="2"  placeholder="{lang thread_content}" fwin="reply">$postinfo[message]</textarea>
 			</li>
-			<li style="padding:0px;">
-				<a href="javascript:;" class="y" style="background:url({STATICURL}image/mobile/images/icon_photo.png) no-repeat;overflow:hidden;">
-					<input type="file" name="Filedata" id="filedata" style="width:30px;height:30px;font-size:30px;opacity:0;"/>
-				</a>
-			</li>
+			<li  >
+			<span class="y"><button id="postsubmit" class="btn_pn <!--{if $_GET[action] == 'edit'}-->btn_pn_blue" disable="false"<!--{else}-->btn_pn_grey" disable="true"<!--{/if}-->><span><!--{if $_GET[action] == 'newthread'}-->{lang send_thread}<!--{elseif $_GET[action] == 'reply'}-->{lang join_thread}<!--{elseif $_GET[action] == 'edit'}-->{lang edit_save}<!--{/if}--></span></button></span>
+		    </li>
 		</ul>
-		<ul id="imglist" class="post_imglist cl bl_line">
-		</ul>
+	 
 		<!--{if $_GET[action] != 'edit' && ($secqaacheck || $seccodecheck)}-->
 		<!--{subtemplate common/seccheck}-->
 		<!--{/if}-->
 		<!--{hook/post_bottom_mobile}-->
+		
 	</div>
+	
 </div>
 <!-- main postbox start -->
 </form>
