--- a/论坛项目/template/forum/forum/viewthread.htm
+++ b/论坛项目/template/forum/forum/viewthread.htm
@@ -9,7 +9,6 @@
 	<script type="text/javascript">zoomstatus = parseInt($_G['setting']['zoomstatus']);var imagemaxwidth = '{$_G['setting']['imagemaxwidth']}';var aimgcount = new Array();</script>
 
 	<style id="diy_style" type="text/css"></style>
-	<!-- xiong -->
 	<!--[diy=diynavtop]--><div id="diynavtop" class="area"></div><!--[/diy]-->
 	
 
@@ -82,12 +81,12 @@
 			<!-- {if $_G[fid] == 37} -->
 				<div class="left_title"> 
 						<div class="title_img">
-							<a href="#" target="_blank">
+							<span href="#" target="_blank">
 								<img src="{$_G['own_static_path']}/img/cast_title.png" />
-							</a>
-							<a class="cast2_title h1" href="#" target="_blank">Cast II</a>
+							</span>
+							<a class="cast2_title h1" href="#" target="_blank">ASU Watch</a>
 						</div>
-				</div>
+				</div><!-- sivan社区详情 -->
 			<!-- {/if} -->
 			<!--{if ($_G['forum']['threadtypes'] && $_G['forum']['threadtypes']['listable']) || count($_G['forum']['threadsorts']['types']) > 0}-->
 					<ul id="thread_types" class=" nav nav-tabs">
