--- a/论坛项目/static/forum/css/hostpage.css
+++ b/论坛项目/static/forum/css/hostpage.css
@@ -26,10 +26,10 @@ padding-left: 0px;
 }
 .title_1{
 	color:#f0ad4e;
+	padding-top: 4px;
+	margin-bottom: 10px;
 }
-.hot_con .title {
-    padding-top: 4px;
-}
+
 .vip{
 	color:#F2CC03;
 }
