--- a/论坛项目/template/forum/forum/forumdisplay.htm
+++ b/论坛项目/template/forum/forum/forumdisplay.htm
@@ -466,6 +466,8 @@
 		<!--{/if}-->
 	</div>
 </div><!-- left_warp -->
+
+<!-- sivan社区右 -->
 <div class="col-sm-5 col-md-4 col-lg-3 right">
 	
 	    <!-- 搜索框**开始 -->
@@ -475,22 +477,8 @@
 			<input type="text" name="srchtxt" id="scbartxt"  class="search" placeholder="搜索" aria-describedby="basic-addon1">
 		</form>
 		<!-- 搜索框**结束 -->
-         
-			<!--{if !$_GET['archiveid']}-->
-			<a href="javascript:;" id="newspecial" 
-			onmouseover="$('newspecial').id = 'newspecialtmp';this.id = 'newspecial';showMenu({'ctrlid':this.id})"
-			{if !$_G['forum']['allowspecialonly'] && empty($_G['forum']['picstyle']) && !$_G['forum']['threadsorts']['required']} 
-			onclick="showWindow('newthread', 'forum.php?mod=post&action=newthread&fid=$_G[fid]')"
-			{else} onclick="location.href='forum.php?mod=post&action=newthread&fid=$_G[fid]';return false;"
-			{/if} title="{lang send_posts}">  
-            <div class="box_posted">
-				<span class="sign_img">
-				<!--{avatar($_G[uid],big)}-->
-		       	</span>
-				<span class="h4 posted text-left">+发帖</span>
-            </div>
-		</a>
-		<!--{/if}-->
+		 
+		<!-- 签到**开始 -->
 		<div class="sd">
 				<!--{hook/forumdisplay_side_top}-->
 				<!--{if !$subforumonly}-->
@@ -501,7 +489,9 @@
 				</div>
 				<!--{hook/forumdisplay_side_bottom}-->
 		</div> 
-        <div class="recommend">
+		<!-- 签到**结束 -->
+
+		<div class="recommend">
             <div class="recommend_head">
                 <h3 class="panel-title">{lang forum_modedby}：</h3>
 			</div>
@@ -513,7 +503,41 @@
 			</div> 
 			<!--{/if}--> 
 
-        </div> <!-- recommend -->
+		</div> <!-- recommend -->
+		
+		<!-- 显示头像发帖**开始 -->
+		<!--{if !$_GET['archiveid']}-->
+		<a href="javascript:;" id="newspecial" 
+		onmouseover="$('newspecial').id = 'newspecialtmp';this.id = 'newspecial';showMenu({'ctrlid':this.id})"
+		{if !$_G['forum']['allowspecialonly'] && empty($_G['forum']['picstyle']) && !$_G['forum']['threadsorts']['required']} 
+		onclick="showWindow('newthread', 'forum.php?mod=post&action=newthread&fid=$_G[fid]')"
+		{else} onclick="location.href='forum.php?mod=post&action=newthread&fid=$_G[fid]';return false;"
+		{/if} title="{lang send_posts}">  
+			<div class="box_posted">
+				<span class="sign_img">
+				<!--{avatar($_G[uid],big)}-->
+				</span>
+				<span class="h4 posted text-left">+发帖</span>
+			</div>
+		</a>
+		<!--{/if}-->
+		<!-- 显示头像发帖**结束 -->
+
+        <!-- 活动海报**开始 -->
+		<div class="ntc clearfix">
+			<div class="notice_title">官方活动
+				<a class="pull-right more" href="javascript:;">
+					更多<i class="fa fa-angle-right" aria-hidden="true"></i>
+				</a>
+			</div>
+			<div class="official_functions">
+				<img src="{$_G['own_static_path']}/img/bill.png" alt="">
+					<a class="Reservations" href="#" target="_blank">
+						预约购买<i class="fa fa-cart-plus" aria-hidden="true"></i>
+					</a>
+			</div>
+		</div>
+		<!-- 活动结束**开始 -->
      
 
     </div> <!-- right -->
