--- a/论坛项目/template/forum/common/header.htm
+++ b/论坛项目/template/forum/common/header.htm
@@ -46,10 +46,10 @@
 					<a href="#"> <img class="logo" alt="Brand" src="{$_G['own_static_path']}/img/logo.png"> </a>
 				</div>
 				<ul class="nav navbar-nav navbar-right">
-					<li {if !$_G['fid'] } class="active" {/if}><a href="/bbs/forum.php?">论坛首页</a></li>
-					<li {if $_G['fid'] == 37 } class="active" {/if}><a href="/bbs//forum.php?mod=forumdisplay&fid=37">Watch社区</a></li>
-					<li {if $_G['fid'] == 38 } class="active" {/if}><a href="/bbs//forum.php?mod=forumdisplay&fid=38">活动</a></li>
-					<li {if $_G['fid'] == 39 } class="active" {/if}><a href="/bbs//forum.php?mod=forumdisplay&fid=39">服务</a></li>
+					<li {if !$_G['fid'] } class="active" {/if}><a href="forum.php?">论坛首页</a></li>
+					<li {if $_G['fid'] == 37 } class="active" {/if}><a href="forum.php?mod=forumdisplay&fid=37">Watch社区</a></li>
+					<li {if $_G['fid'] == 38 } class="active" {/if}><a href="forum.php?mod=forumdisplay&fid=38">活动</a></li>
+					<li {if $_G['fid'] == 39 } class="active" {/if}><a href="forum.php?mod=forumdisplay&fid=39">服务</a></li>
 					<li><a href="#">进入商城</a></li>
 					<li><a href="#">官网</a></li>
 					<li><a href="#">软件下载</a></li>
